--- a/.github/workflows/DockerBuild.yml
+++ b/.github/workflows/DockerBuild.yml
@@ -14,5 +14,5 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/anugyaagarwal/fastapi1:v1.0 .
-          docker push ${{ secrets.DOCKER_USERNAME }}/anugyaagarwal/fastapi1:v1.0 
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/fastapi1:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/fastapi1:latest 
